fixed add/added entries

--- a/views/jokes/new.ejs
+++ b/views/jokes/new.ejs
@@ -20,6 +20,7 @@
     <label for="joke">The Zinger:</label>
     <input type="text" id="joke" name="joke" required><br></br>
 
+    <button type="submit">Add Joke</button><br></br>
     <button><a href="/">Back to Home</a></button>
 
 
