Added Show Page/Index, Working on Edit Page

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -9,7 +9,7 @@
     <h1>A Place to Log Your Best Jokes... ONLY!</h1>
     <p><i>"If you can even call them that..."</i></p><br></br>
     <button><a href="/jokes/new">Make a Funny</a></button>
-    <button><a href="/jokes/show">My Jokes</a></button>
+    <button><a href="/jokes">My Jokes</a></button>
     <button><a href="/jokes/edit">Make em' Funnier</a></button>
   </body>
 
