--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,4 +15,6 @@
         <% }) %>
     </ul>
 </body>
+<button><a href="/jokes/new">Make a Funny</a></button>
+<button><a href="/">Back to Home</a></button>
 </html>
