--- a/views/jokes/edit.ejs
+++ b/views/jokes/edit.ejs
@@ -3,28 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Edit Joke</title>
+    <title>Edit <%= joke.title %></title>
 </head>
 <body>
-    <h1>Edit Joke</h1>
-    <form action="/jokes/<%= joke._id %>" method="POST">
-        <label for="title">Title:</label>
-        <input type="text" id="title" name="title" value="<%= joke.title %>"><br>
+    <h1>Edit <%= joke.title %>></h1>
+    <form action="/jokes/<%= joke._id %>/edit" method="POST">
+        <label for="title">Joke Title:</label>
+        <input type="text" id="title" name="title" value="<%= joke.title %>" required><br><br>
 
-        <label for="date">Date:</label>
-        <input type="date" id="date" name="date" value="<%= joke.date %>"><br>
+        <label for="date">When did you think of this?:</label>
+        <input type="date" id="date" name="date" value="<%= joke.date %>" required><br><br>
 
         <label for="genre">Genre:</label>
-        <input type="text" id="genre" name="genre" value="<%= joke.genre %>"><br>
+        <input type="text" id="genre" name="genre" value="<%= joke.genre %>" required><br><br>
 
         <label for="joke">The New Zinger:</label>
-        <input type="text" id="joke" name="joke" value="<%= joke.joke %>"><br>
+        <input type="text" id="joke" name="joke" value="<%= joke.joke %>" required><br><br>
 
-        <button type="submit">Make it Happen</button><br></br>
+        <button type="submit">Make it Happen</button><br><br>
     </form>
 
-    <form action="/jokes/<%= joke._id %>/delete" method="POST">
-        <button type="submit">This was a BAD idea</button>
-    </form>
+    <button><a href="/">Back to Home</a></button>
 </body>
 </html>
