Malik & Romel's JokeBook (Full MVP)

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,13 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/stylesheets/style.css">
     <title>Your Joke Book</title>
   </head>
   <body>
     <h1>A Place to Log Your Best Jokes... ONLY!</h1>
     <p><i>"If you can even call them that..."</i></p><br></br>
+    <div id="Home Buttons">
+      <div class="button-container">
     <button><a href="/jokes/new">Make a Funny</a></button>
-    <button><a href="/jokes">My Jokes</a></button>
+    <button><a class="homeBTN" href="/jokes">My Jokes</a></button>
+    </div>
+  </div>
   </body>
 
 </html>
